# TicTacToe

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/inc/: Board.h  Player.h  PlayerCPU.h  TicTacToe.h
Core/src/: Board.cpp  Player.cpp  PlayerCPU.cpp  TicTacToe.cpp
TicTacToe_ConsoleApp/: CMakeLists.txt
TicTacToe_ConsoleApp/inc/: Console.h  ConsoleApp.h  PlayerConsole.h  Player_ConsoleApp.h  TicTacToe_ConsoleApp.h
TicTacToe_ConsoleApp/src/: Console.cpp  ConsoleApp.cpp  PlayerConsole.cpp  Player_ConsoleApp.cpp  TicTacToe_ConsoleApp.cpp  main.cpp
TicTacToe_GUI/: CMakeLists.txt
TicTacToe_GUI/inc/: MainFrame.h  PlayerGUI.cpp  PlayerGUI.h  TicTacToe_GUI.h
TicTacToe_GUI/src/: MainApp.cpp  MainFrame.cpp  PlayerGUI.cpp  TicTacToe_GUI.cpp
TicTacToe_wxApp/: CMakeLists.txt
TicTacToe_wxApp/inc/: MainApp.h  MainFrame.h  Player_wxApp.h  TicTacToe_wxApp.h
TicTacToe_wxApp/src/: MainFrame.cpp  Player_wxApp.cpp  TicTacToe_wxApp.cpp
inc/: Board.h  Console.h  ConsoleApp.h  Player.h  PlayerCPU.h  PlayerConsole.h  Players.h  TicTacToe.h  TicTacToeConsoleApp.h
src/: Board.cpp  CMakeLists.txt  Console.cpp  ConsoleApp.cpp  Players.cpp  TicTacToe.cpp  TicTacToeConsoleApp.cpp  main.cpp
